Hack to prevent parent flexbox from collapsing

--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,7 @@
 .style-elements-root {
   position: fixed;
 }
+
+[data-class='row'] {
+  flex-shrink: 0;
+}
